--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -23323,4 +23323,19 @@ div:not(.table-compact) > .table .th .dropdown-container .dropdown-list {
   border-width: 0;
 }
 
+* {
+  color: #ffffff;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+
+body {
+  background-color: #121213;
+}
+
+.title-container {
+  text-align: center;
+  width: 510px;
+  border-bottom: solid 1px #3a3a3c;
+}
+
 /*# sourceMappingURL=theme.compiled.css.map */
