--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -32,4 +32,14 @@ body {
   flex-wrap: wrap;
 }
 
+.key-container button {
+  width: 43px;
+  height: 58px;
+  border-radius: 4px;
+  border: none;
+  background-color: #818384;
+  margin: 4px;
+  padding: 0px;
+}
+
 /*# sourceMappingURL=theme.compiled.css.map */
