--- a/themesource/stylegame/web/main.scss
+++ b/themesource/stylegame/web/main.scss
@@ -33,3 +33,13 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+
+.key-container button { 
+    width: 43px;
+    height: 58px;
+    border-radius: 4px;
+    border:none;
+    background-color: #818384;
+    margin: 4px;
+    padding: 0px;
+}
