--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -39,7 +39,15 @@ body {
   border: none;
   background-color: #818384;
   margin: 4px;
-  padding: 0px;
+}
+
+.key-container button:nth-child(11) {
+  margin-left: 30px;
+}
+
+.key-container button:nth-child(20),
+.key-container button:nth-child(28) {
+  width: 68px;
 }
 
 /*# sourceMappingURL=theme.compiled.css.map */
