--- a/themesource/stylegame/web/main.scss
+++ b/themesource/stylegame/web/main.scss
@@ -41,5 +41,14 @@ body {
     border:none;
     background-color: #818384;
     margin: 4px;
-    padding: 0px;
+    //padding: 0px;
+}
+
+.key-container button:nth-child(11){
+    margin-left: 30px;
+}
+
+.key-container button:nth-child(20),
+.key-container button:nth-child(28) {
+    width: 68px;
 }
