--- a/themesource/stylegame/web/main.scss
+++ b/themesource/stylegame/web/main.scss
@@ -1,8 +1,7 @@
-@import '../../../theme/web/custom-variables';
-
 * {
     color: #ffffff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 body {
@@ -34,17 +33,16 @@ body {
     flex-wrap: wrap;
 }
 
-.key-container button { 
+.key-container button {
     width: 43px;
     height: 58px;
     border-radius: 4px;
-    border:none;
+    border: none;
     background-color: #818384;
     margin: 4px;
-    //padding: 0px;
 }
 
-.key-container button:nth-child(11){
+.key-container button:nth-child(11) {
     margin-left: 30px;
 }
 
@@ -60,10 +58,53 @@ body {
 .tile-container .tile {
     width: 62px;
     height: 62px;
-    border: 2px solid #3a3a3c;
+    border: 2px solid#3a3a3c;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 2px;
+}
+
+.message-container {
+    height: 30px;
+}
+
+.message-container p {
+    background-color: #818384;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0;
+}
+
+.tile.flip {
+    animation: 0.5s linear flipping;
+}
+
+@keyframes flipping {
+    0% {
+        transform: rotateX(0deg);
+    }
+    50% {
+        transform: rotateX(90deg);
+    }
+    100% {
+        transform: rotateX(0deg);
+    }
+}
+
+
+
+.grey-overlay {
+    background-color: #3a3a3c !important;
+    border:none !important;
+}
+.yellow-overlay {
+    background-color: #b59f3a !important;
+    border:none !important;
+}
+
+.green-overlay {
+    background-color: #538d4e !important;
+    border:none !important;
 }
